syntax = "proto3";

package go.micro.api.user;

message RegisterRequest {
    string Username = 1;
    string Firstname = 2;
    string Lastname = 3;
    string Email = 4;
    string Device = 5;
    bytes Salt = 6;
    bytes Verifier = 7;
}

message Empty {}

message VerifierRequest {
    string Username = 1;
    string Device = 2;
}

message VerifierResponse {
    bytes Verifier = 1;
    bytes Salt = 2;
}

message AddDeviceRequest {
    string Username = 1;
    string Device = 2;
}

service User {
    rpc Register(RegisterRequest) returns (Empty) {}
    rpc GetVerifier(VerifierRequest) returns (VerifierResponse) {}
    rpc AddDevice(AddDeviceRequest) returns (Empty) {}
}
